--- a/accounting-web/src/style.css
+++ b/accounting-web/src/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Add the Work Sans font to the body */
+body {
+    font-family: 'Work Sans', sans-serif;
+}
