--- a/cashier-web/src/assets/main.css
+++ b/cashier-web/src/assets/main.css
@@ -5,6 +5,15 @@
 @tailwind utilities;
 
 /* Add the Work Sans font to the body */
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Work Sans', sans-serif;
+    height: 100%;
+}
+
+.app {
+    height: 100%;
 }
