--- a/api/storage/system/templates/accounting/invoice.html
+++ b/api/storage/system/templates/accounting/invoice.html
@@ -5,9 +5,29 @@
     <title>Invoice</title>
 </head>
 <body>
-<h1 class="my">INVOICE</h1>
-<h1 id="super">{{ name }}</h1>
-
+<div>
+    <h1 class="">INVOICE</h1>
+    <h1>{{ invoice_number }}</h1>
+    <h1>{{ date }}</h1>
+</div>
+<div>
+    <h1>{{ company_name }}</h1>
+    <h1>{{ company_address }}</h1>
+    <h1>{{ company_phone }}</h1>
+    <h1>{{ company_email }}</h1>
+</div>
+<div>
+    <h1>{{ customer_name }}</h1>
+    <h1>{{ customer_company_name }}</h1>
+    <h1>{{ customer_address }}</h1>
+    <h1>{{ customer_phone }}</h1>
+    <h1>{{ customer_email }}</h1>
+</div>
+<div>
+    <h1>{{ product_name }}</h1>
+    <h1>{{ product_quantity }}</h1>
+    <h1>{{ product_unit_price }}</h1>
+</div>
 
 </body>
 </html>
